--- a/config/vagrant/nginx.conf
+++ b/config/vagrant/nginx.conf
@@ -15,8 +15,8 @@ events {
 
 
 http {
-    passenger_root /home/vagrant/.rubies/ruby-1.9.3-p545/lib/ruby/gems/1.9.1/gems/passenger-4.0.40;
-    passenger_ruby /home/vagrant/.rubies/ruby-1.9.3-p545/bin/ruby;
+    passenger_root /var/lib/gems/2.1.0/gems/passenger-4.0.40;
+    passenger_ruby /usr/bin/ruby2.1.0;
 
     include       mime.types;
     default_type  application/octet-stream;
@@ -42,8 +42,8 @@ http {
         passenger_enabled on;
         rails_env development;
         passenger_user vagrant;
-	access_log  /vagrant/log/nginx-access.log  main;
-	error_log  /vagrant/log/nginx-error.log;
+        access_log  /vagrant/log/nginx-access.log  main;
+        error_log  /vagrant/log/nginx-error.log;
     }
 
 
