--- a/config/vagrant/nginx.conf
+++ b/config/vagrant/nginx.conf
@@ -15,8 +15,8 @@ events {
 
 
 http {
-    passenger_root /var/lib/gems/2.1.0/gems/passenger-4.0.40;
-    passenger_ruby /usr/bin/ruby2.1.0;
+    passenger_root /usr/lib/ruby/gems/2.1.0/gems/passenger-4.0.40;
+    passenger_ruby /usr/bin/ruby2.1;
 
     include       mime.types;
     default_type  application/octet-stream;
